# clang-pimpl

./: .clang-tidy  .gitignore  CMakeLists.txt  PimplAction.cc  README.md  clang_order_fields.cc  clang_order_fields_master.cc  clang_order_fields_master.hh  clang_pimpl.cc  command_line_files_keeper.cc  command_line_files_keeper.hh  fields_order_pack.hh  files_keeper.hh  files_keeper_for_regression_tests.cc  files_keeper_for_regression_tests.hh  order_fields_action.hh  viz.md
clang_order_fields/: CMakeLists.txt  clang_order_fields_master.cc  clang_order_fields_master.hh  order_fields_action.cc
executables/: CMakeLists.txt  clang_order_fields.cc  clang_reorder_fields.cc  command_line_files_keeper.hh
refactor_adapter/: CMakeLists.txt  command_line_files_keeper.cc  command_line_files_keeper.hh  command_maps.hh  files_keeper.hh  options_adapter.hh  refactor_adapter.cc  refactor_adapter.hh  simplified_options_adapter.cc  simplified_options_adapter.hh
refactor_tools/: CMakeLists.txt
refactor_tools/clang_definitions_mover/: CMakeLists.txt  definitions_mover_action.cc  definitions_mover_action.hh  definitions_mover_refactor_adapter.cc  definitions_mover_refactor_adapter.hh
refactor_tools/clang_reorder_fields/: CMakeLists.txt  reorder_fields_action.cc  reorder_fields_action.hh  reorder_fields_options_adapter.cc  reorder_fields_options_adapter.hh  reorder_fields_refactor_adapter.cc  reorder_fields_refactor_adapter.hh
regression_tests/: CMakeLists.txt  compilation_database_for_regression_tests.hh  compilation_pack.hh  execute_command.hh  expect_file_command.hh  expect_filestructure_command.hh  fields_order_pack.hh  files_keeper_for_regression_tests.cc  files_keeper_for_regression_tests.hh  filestructure_command.hh  given_file_command.hh  given_filestructure_command.hh  given_filesystem_command.hh  global_state.hh  metacommand.hh  otherwise_nothing_changed_command.hh  regression_tests_parser.cc  regression_tests_parser.hh  run_regression_tests.cc  storage.cc  storage.hh  test_cc_with_header.txt  test_deeply_rooted_main.txt  test_three_fields_struct.txt  test_two_fields_struct.txt  test_two_sources_using_the_same_struct.txt  test_with_std_string.txt
regression_tests/clang-definitions-mover/: test_one_method_move_to_existing_source_in_the_same_directory.tat
regression_tests/clang-reorder-fields/: test_deeply_rooted_main.txt  test_three_fields_struct.txt
